usr.bin/kcollect - Add F flag
- '-F' option works like '-f' option but it does not show the whole
  kcollect buffer, just the last entries before starting to print a new
  entry every 10 seconds

--- a/usr.bin/kcollect/kcollect.8
+++ b/usr.bin/kcollect/kcollect.8
@@ -103,6 +103,10 @@ to incrementally collect and output more data.
 If outputting to gnuplot, the plot will be updated regularly.  However,
 please note that this is fairly expensive since the plot data has to
 be completely re-sent to gnuplot on each update.
+.It Fl F
+Same as
+.Fl f
+but do not display the whole buffer at the beginning.
 .It Fl w Ar plotfile
 Generate gnuplot output to a .png or .jpg file, depending on the extension
 of the filename you supply.
