kernel/drm: Various cleanups.
* Change further references for the radeonkms.ko -> radeon.ko renaming.

* Remove no longer needed iicbus_if.h from Makefile.

* Cleanup radeon Makefile.

--- a/share/man/man4/drm.4
+++ b/share/man/man4/drm.4
@@ -41,10 +41,10 @@ for supporting video acceleration.
 The
 .Nm
 drivers provide support for the following chipsets:
-.Bl -column -offset indent ".Pa radeonkms.ko" ".Sy Kernel Option" ".Sy Chipset"
+.Bl -column -offset indent ".Pa radeon.ko" ".Sy Kernel Option" ".Sy Chipset"
 .It Sy Module Ta Sy "Kernel option" Ta Sy Chipset
 .It Pa i915.ko Ta i915 Ta Intel i915, i945, i965, G3x, G4x
-.It Pa radeonkms.ko Ta radeon Ta AMD/ATI Radeon
+.It Pa radeon.ko Ta radeon Ta AMD/ATI Radeon
 .El
 .Pp
 In most cases
