printf.3: .Fa -> .Dv

--- a/lib/libc/stdio/printf.3
+++ b/lib/libc/stdio/printf.3
@@ -171,7 +171,7 @@ functions
 effectively assume a
 .Fa size
 of
-.Fa INT_MAX
+.Dv INT_MAX
 + 1.
 .Pp
 The format string is composed of zero or more directives:
