--- a/share/man/man9/kmalloc.9
+++ b/share/man/man9/kmalloc.9
@@ -36,12 +36,11 @@
 .\" $NetBSD: malloc.9,v 1.3 1996/11/11 00:05:11 lukem Exp $
 .\" $FreeBSD: src/share/man/man9/malloc.9,v 1.42 2005/02/22 17:20:20 brueffer Exp $
 .\"
-.Dd November 21, 2017
+.Dd July 27, 2019
 .Dt KMALLOC 9
 .Os
 .Sh NAME
 .Nm kmalloc ,
-.Nm kmalloc_cachealign ,
 .Nm kfree ,
 .Nm krealloc ,
 .Nm kmalloc_raise_limit ,
@@ -53,8 +52,6 @@
 .In sys/malloc.h
 .Ft void *
 .Fn kmalloc "unsigned long size" "struct malloc_type *type" "int flags"
-.Ft void *
-.Fn kmalloc_cachealign "unsigned long size" "struct malloc_type *type" "int flags"
 .Ft void
 .Fn kfree "void *addr" "struct malloc_type *type"
 .Ft void *
@@ -72,10 +69,6 @@ The
 function allocates uninitialized memory in kernel address space for an
 object whose size is specified by
 .Fa size .
-.Fn kmalloc_cachealign
-function is same as
-.Fn kmalloc
-except that the allocated memory will be cache line size aligned.
 .Pp
 The
 .Fn kfree
@@ -216,6 +209,8 @@ Indicates that the system can dig into its reserve in order to obtain the
 requested memory.
 .It Dv M_POWEROF2
 Rounds up the size to the nearest power of 2.
+.It Dv M_CACHEALIGN
+Aligns to the CPU cache line size.
 .It Dv M_NULLOK
 This flag is usually specified along with
 .Dv M_WAITOK
@@ -257,21 +252,6 @@ typedef via the
 and
 .Fn MALLOC_DEFINE
 macros.
-.Bd -literal -offset indent
-/* sys/something/foo_extern.h */
-
-MALLOC_DECLARE(M_FOOBUF);
-
-/* sys/something/foo_main.c */
-
-MALLOC_DEFINE(M_FOOBUF, "foobuffers", "Buffers to foo data into the ether");
-
-/* sys/something/foo_subr.c */
-
-\&...
-buf = kmalloc(sizeof *buf, M_FOOBUF, M_NOWAIT);
-
-.Ed
 .Sh IMPLEMENTATION NOTES
 The memory allocator allocates memory in chunks that have size a power
 of two for requests up to the size of a page of memory.
@@ -292,6 +272,18 @@ if the request could not be satisfied (implying that
 or
 .Dv M_NULLOK
 was set).
+.Sh EXAMPLES
+.Bd -literal
+/* sys/something/foo_extern.h */
+MALLOC_DECLARE(M_FOOBUF);
+
+/* sys/something/foo_main.c */
+MALLOC_DEFINE(M_FOOBUF, "foobuffers", "Foo data");
+
+/* sys/something/foo_subr.c */
+\&...
+buf = kmalloc(sizeof *buf, M_FOOBUF, M_NOWAIT);
+.Ed
 .Sh DIAGNOSTICS
 A kernel compiled with the
 .Dv INVARIANTS
