--- a/lib/libc/sys/read.2
+++ b/lib/libc/sys/read.2
@@ -28,7 +28,7 @@
 .\"     @(#)read.2	8.4 (Berkeley) 2/26/94
 .\" $FreeBSD: src/lib/libc/sys/read.2,v 1.9.2.6 2001/12/14 18:34:01 ru Exp $
 .\"
-.Dd March 2, 2018
+.Dd August 7, 2019
 .Dt READ 2
 .Os
 .Sh NAME
@@ -188,6 +188,8 @@ was negative.
 .It Bq Er EAGAIN
 The file was marked for non-blocking I/O,
 and no data were ready to be read.
+.It Bq Er ENOBUFS
+A message was not delivered because it would have overflowed the buffer.
 .El
 .Pp
 In addition,
