sbin/hammer2: Minor fix in man
Correct d371ccd28ada846c26eb398d4f4798fd4a74d47d.

--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -367,7 +367,7 @@ option.
 .\" ==== printinode ====
 .It Cm printinode Ar path
 Dump inode.
-.\" ==== printinode ====
+.\" ==== dumpchain ====
 .It Cm dumpchain Op path Op chnflags
 Dump in-memory chain topology.
 .El
