--- a/usr.bin/dsynth/dsynth.1
+++ b/usr.bin/dsynth/dsynth.1
@@ -39,7 +39,7 @@
 .Nd dsynth bulk dports builder utility
 .Sh SYNOPSIS
 .Nm
-.Op Fl dhvy
+.Op Fl dhvyS
 .Op Fl s Ar n
 .Ar directive
 .Op origins
@@ -140,8 +140,9 @@ not use regular filesystem space.
 .Sh OPTIONS
 .Bl -tag -width indent
 .It Fl d
-Run in debug mode.  This automatically turns off ncurses and outputs
-the primary log (00_last_results.log) to the standard output.
+Run in debug mode.  If specified two or more times this will turn off
+ncurses and output the primary log (00_last_results.log) to the standard
+output, along with additional spew.
 .It Fl h
 Quickly output a synopsis of options and directives and exit.
 .It Fl v
@@ -158,6 +159,12 @@ This gives
 a slower ramp that it can load manage against.
 Specifying 0 disables the slow-start feature and the maximum number of
 worker slots (limited by the dependency graph) will be loaded immediately.
+.It Fl S
+Turn off curses for script friendliness.  The output will be log 00 and
+should be redirected to /dev/null or something similar.
+You may also wish to use the
+.Fl y
+option for scripting dsynth.
 .El
 .Sh DIRECTIVES
 .Pp
