--- a/lib/libc/gen/endutxent.3
+++ b/lib/libc/gen/endutxent.3
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 23, 2018
+.Dd August 30, 2019
 .Dt ENDUTXENT 3
 .Os
 .Sh NAME
@@ -56,7 +56,7 @@
 .Ft void
 .Fn setutxent void
 .Ft int
-.Fn setutxdb "utx_db_t db" "char *fname"
+.Fn setutxdb "utx_db_t db" "const char *fname"
 .Sh DESCRIPTION
 These functions provide access to the
 .Xr utmpx 5
