newfs_msdos.8: Re-fix typo. :)

--- a/sbin/newfs_msdos/newfs_msdos.8
+++ b/sbin/newfs_msdos/newfs_msdos.8
@@ -81,7 +81,7 @@ is prepended to the name to construct the actual device name.
 To work a file in the current directory use
 .Ar ./filename
 .Pp
-The options are as follow:
+The options are as follows:
 .Bl -tag -width indent
 .It Fl N
 Do not create a file system: just print out parameters.
