sbin/mount_msdos: Bring in FreeBSD/Git 0c5ae3a9 (add -M option)

--- a/sbin/mount_msdos/mount_msdos.8
+++ b/sbin/mount_msdos/mount_msdos.8
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: src/sbin/mount_msdos/mount_msdos.8,v 1.19.2.1 2000/12/08 14:03:59 ru Exp $
 .\"
-.Dd September 29, 2016
+.Dd September 10, 2019
 .Dt MOUNT_MSDOS 8
 .Os
 .Sh NAME
@@ -43,6 +43,7 @@
 .Op Fl g Ar gid
 .Op Fl L Ar locale
 .Op Fl m Ar mask
+.Op Fl M Ar mask
 .Op Fl o Ar options
 .Op Fl u Ar uid
 .\".Op Fl G
@@ -104,10 +105,24 @@ for more information about octal file modes.)
 Only the nine low-order bits of
 .Ar mask
 are used.
+The value of
+.Ar -M
+is used if it is supplied and
+.Ar -m
+is omitted.
 The default
 .Ar mask
 is taken from the
 directory on which the file system is being mounted.
+.It Fl M Ar mask
+Specify the maximum file permissions for directories
+in the file system.
+The value of
+.Ar -m
+is used if it is supplied and
+.Ar -M
+is omitted.
+See the previous option's description for details.
 .It Fl s
 Force behaviour to
 ignore and not generate Win'95 long filenames.
