--- a/lib/libc/gen/endutxent.3
+++ b/lib/libc/gen/endutxent.3
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd August 30, 2019
+.Dd September 10, 2019
 .Dt ENDUTXENT 3
 .Os
 .Sh NAME
@@ -35,6 +35,7 @@
 .Nm getutxent ,
 .Nm getutxid ,
 .Nm getutxline ,
+.Nm getutxuser ,
 .Nm pututxline ,
 .Nm setutxent ,
 .Nm setutxdb
@@ -51,6 +52,8 @@
 .Fn getutxid "const struct utmpx *"
 .Ft struct utmpx *
 .Fn getutxline "const struct utmpx *"
+.Ft struct utmpx *
+.Fn getutxuser "const char *user"
 .Ft struct utmpx *
 .Fn pututxline "const struct utmpx *"
 .Ft void
@@ -90,6 +93,16 @@ entry which has the same name as specified in the
 field, or
 .Dv NULL
 if no match is found.
+.Pp
+.Fn getutxuser
+searches for the next entry in the database whose
+.Fa ut_type
+has a value of
+.Dv USER_PROCESS
+and whose
+.Fa ut_user
+is equal to
+.Fa user .
 .Pp
 .Fn pututxline
 adds the argument
