Add a wtmpcvt(1) utility from FreeBSD to convert wtmp -> wtmpx.

--- a/share/man/man5/utmpx.5
+++ b/share/man/man5/utmpx.5
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 31, 2007
+.Dd September 10, 2019
 .Dt UTMPX 5
 .Os
 .Sh NAME
@@ -130,6 +130,7 @@ file.
 .Xr rwho 1 ,
 .Xr w 1 ,
 .Xr who 1 ,
+.Xr wtmpxcvt 1 ,
 .Xr endutxent 3 ,
 .Xr logwtmpx 3 ,
 .Xr utmp 5 ,
