--- a/lib/libpam/modules/pam_lastlog/pam_lastlog.8
+++ b/lib/libpam/modules/pam_lastlog/pam_lastlog.8
@@ -34,7 +34,7 @@
 .\"
 .\" $FreeBSD: head/lib/libpam/modules/pam_lastlog/pam_lastlog.8 240506 2012-09-14 17:50:42Z eadler $
 .\"
-.Dd July 24, 2018
+.Dd September 11, 2019
 .Dt PAM_LASTLOG 8
 .Os
 .Sh NAME
@@ -90,7 +90,7 @@ Ignore I/O failures.
 .Xr logout 3 ,
 .Xr pam 3 ,
 .Xr pam.conf 5 ,
-.Xr utmp 5 ,
+.Xr utmpx 5 ,
 .Xr lastlogin 8
 .Sh AUTHORS
 The
