--- a/share/man/man3/sysexits.3
+++ b/share/man/man3/sysexits.3
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man3/sysexits.3,v 1.5.2.3 2001/12/17 11:30:11 ru Exp $
 .\"
-.Dd March 31, 1996
+.Dd September 11, 2019
 .Dt SYSEXITS 3
 .Os
 .Sh NAME
@@ -86,7 +86,7 @@ does not exist in the passwd file.
 .It Dv EX_OSFILE Pq 72
 Some system file (e.g.,
 .Pa /etc/passwd ,
-.Pa /var/run/utmp ,
+.Pa /var/run/utmpx ,
 etc.) does not exist, cannot be opened, or has some sort of error
 (e.g., syntax error).
 .It Dv EX_CANTCREAT Pq 73
