--- a/libexec/ftpd/ftpd.8
+++ b/libexec/ftpd/ftpd.8
@@ -28,7 +28,7 @@
 .\"     @(#)ftpd.8	8.2 (Berkeley) 4/19/94
 .\" $FreeBSD: src/libexec/ftpd/ftpd.8,v 1.74 2007/04/20 09:08:20 trhodes Exp $
 .\"
-.Dd June 27, 2019
+.Dd September 11, 2019
 .Dt FTPD 8
 .Os
 .Sh NAME
@@ -222,7 +222,7 @@ A synonym for
 .Fl d .
 .It Fl W
 Do not log FTP sessions to
-.Pa /var/log/wtmp .
+.Pa /var/log/wtmpx .
 .El
 .Pp
 The file
