--- a/share/man/man5/utmpx.5
+++ b/share/man/man5/utmpx.5
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd September 10, 2019
+.Dd September 11, 2019
 .Dt UTMPX 5
 .Os
 .Sh NAME
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .In utmpx.h
 .Sh DESCRIPTION
-In contrast to
+In contrast to the formerly used legacy
 .Pa utmp
 and
 .Pa wtmp ,
@@ -133,7 +133,6 @@ file.
 .Xr wtmpxcvt 1 ,
 .Xr endutxent 3 ,
 .Xr logwtmpx 3 ,
-.Xr utmp 5 ,
 .Xr ac 8 ,
 .Xr init 8 ,
 .Xr newsyslog 8 ,
